# pyfing

./: .pylintrc  LICENSE  README.md  pyproject.toml
examples/: enhancement.ipynb  example.ipynb  frequencies.ipynb  minutiae.ipynb  orientations.ipynb  segmentation.ipynb
models/: SNFOE_weights.index
parameters/segmentation/: fvc2000_db1_b_Gmfs_params.json  fvc2000_db2_b_Gmfs_params.json  fvc2000_db2_b_Sufs_params.json  fvc2000_db3_b_Gmfs_params.json  fvc2000_db4_b_Gmfs_params.json  fvc2002_db1_b_Gmfs_params.json  fvc2002_db2_b_Gmfs_params.json  fvc2002_db2_b_Sufs_params.json  fvc2002_db3_b_Gmfs_params.json  fvc2002_db4_b_Gmfs_params.json  fvc2004_db1_b_Gmfs_params.json  fvc2004_db2_b_Gmfs_params.json  fvc2004_db3_b_Gmfs_params.json  fvc2004_db3_b_Sufs_params.json  fvc2004_db4_b_Gmfs_params.json
pyfing/: __init__.py  _internal_utils.py  definitions.py  enhancement.py  frequencies.py  minutiae.py  orientations.py  segmentation.py  simple_api.py
pyfing/models/: __init__.py
pyfing/utils/: __init__.py  drawing.py  ffe.py  foe.py  fvc_segmentation.py  iso_format.py  minutiae_tools.py  notebook.py  sd27.py
tests/: enhancement_tests.py  frequency_tests.py  leader_tests.py  orientation_tests.py  segmentation_results_fvc.ipynb  segmentation_tests_fvc.py  utils.py
train/: fingerprint_data_augmentation.py  optimize_GMFS_parameters.py  train_GMFS_fvc.py  train_SUFS_fvc.py  training_callbacks.py
