[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyfing"
authors = [{name = "Raffaele Cappelli", email = "raffaele.cappelli@unibo.it"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/raffaele-cappelli/pyfing"

[tool.flit.sdist]
exclude = ["examples/*", "tests/*", "train/*", "parameters/*", ".vscode/*"]

